Cleanup vectorUtil class and added OffHeapScalarQuantizedFloat16VectorValues for fallback support